# groth16-sol-verifier

./: .gitignore  Cargo.toml  README.md
circuit/: Cargo.toml
circuit/src/: circuit.rs  lib.rs
client/: Cargo.toml
client/src/: client.rs  main.rs
contract/: Cargo.toml
contract/src/: final_exponentiation.rs  lib.rs  miller_loop.rs  pvk.rs  utils.rs
