[package]
name = "contract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]
name = "contract"

[features]
default = []
custom-heap = []
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "^1.11.5"
ark-groth16 = { version = "0.3.0", default-features = false}
ark-std = { version = "^0.3.0", features = ["std"]}
ark-ff = { version = "^0.3.0", default-features = false}
ark-ec = { version = "^0.3.0", default-features = false}
ark-bn254 = { version = "0.3.0", features = ["curve"]}
num-traits = "0.2.14"
arrayref = "0.3.6"

[dev-dependencies]
solana-program-test = "=1.11.5"
solana-sdk = "=1.11.5"
